--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "request-json": "0.4.13",
     "request-json-light": "0.5.22",
     "semver": "4.3.1",
-    "send": "0.13.2"
-  },
-  "devDependencies": {
-    "coffeelint": "1.15.0",
+    "send": "0.13.2",
     "npmconf": "2.1.2",
     "tunnel-agent": "0.4.3"
+  },
+  "devDependencies": {
+    "coffeelint": "1.15.0"
   }
 }
